implemented heap memory